fix: Make profile info to overflow with ellipsis

--- a/blocks/profile/__activity/profile__activity.css
+++ b/blocks/profile/__activity/profile__activity.css
@@ -3,6 +3,9 @@
   font-weight: normal;
   font-size: 14px;
   line-height: calc(17 / 14);
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 @media screen and (min-width: 768px) {
